--- a/regular/Makefile
+++ b/regular/Makefile
@@ -1,4 +1,4 @@
-Objects=Mode.o regular.o RegFormula.o
+Objects=Mode.o regular.o RegFormula.o VariableMode.o FixedMode.o
 
 RegFormula:$(Objects)
 	g++ -o RegFormula $(Objects)
